--- a/openai-automation/pom.xml
+++ b/openai-automation/pom.xml
@@ -40,17 +40,23 @@
             </plugin>
 
             <!-- Exec plugin to run App.java -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-            </plugin>
+                      <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+                <!-- PLACED HERE: Directly under plugin -->
+                <mainClass>com.automation.ai.App</mainClass>
+            </configuration>
+        </plugin>
+
 
             <!-- Surefire for tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                
             </plugin>
         </plugins>
     </build>
