--- a/openai-automation/src/main/resources/application.properties
+++ b/openai-automation/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 app.name=AI Automation Framework
 app.version=1.0
-app.env=local
+
+git.repo.path=C:/repos/sample-project
+git.base.ref=main
+git.target.ref=feature-branch
