--- a/openai-automation/pom.xml
+++ b/openai-automation/pom.xml
@@ -25,6 +25,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+       
+    <dependency>
+    <groupId>org.eclipse.jgit</groupId>
+    <artifactId>org.eclipse.jgit</artifactId>
+    <version>6.8.0.202311291450-r</version>
+    </dependency>
+
     </dependencies>
 
     <build>
